# gh-monitor1

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: animation.rs  app.rs  canvas.rs  config_io.rs  context_menu.rs  demo.rs  doctor.rs  lib.rs  link.rs  main.rs  notifications.rs  overlay.rs  paint.rs  settings.rs  setup.rs  single_instance.rs  tray.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  schema.rs
crates/gh/: Cargo.toml
crates/gh/src/: auth.rs  client.rs  events.rs  lib.rs  polling.rs
crates/gh/tests/: wiremock_integration.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: compress.rs  group.rs  humanize.rs  lib.rs  snapshot.rs
crates/timeline/tests/: compress_snapshots.rs  pipeline.rs
crates/timeline/tests/snapshots/: compress_snapshots__snapshot_multi_repo_mixed_kinds.snap  compress_snapshots__snapshot_single_repo_same_kind.snap  compress_snapshots__snapshot_standalone_repo_created.snap
docs/: architecture.md
