[package]
name = "gh-monitor-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Config persistence for gh-monitor"

[dependencies]
serde.workspace = true
toml = "0.8"
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
